--- a/milano_mappe.ipynb
+++ b/milano_mappe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6dd515ea",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,16 @@
     "from shapely.geometry import MultiPoint, Polygon\n",
     "from shapely.ops import unary_union, polygonize\n",
     "import alphashape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d143f60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('credentials')"
    ]
   },
   {
@@ -492,7 +502,7 @@
    "outputs": [],
    "source": [
     "# richiesta API\n",
-    "API_KEY = 'AIzaSyCbfA8declH-R-9GLlW0shfQmG8Tt5Vx5w'\n",
+    "API_KEY = 'YOUR_API_KEY'\n",
     "base_url = 'https://maps.googleapis.com/maps/api/distancematrix/json'\n",
     "\n",
     "data = []\n",
@@ -754,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
